added header content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <!-- page-header -->
-        <header class="container page-header margin-top-standard"></header>
+        <header class="container main-header">
+            <img src="img/logo.png" alt="Neori" class="logo">
+        </header>
         <!-- main -->
         <main class="container">
             <!-- jumbotron -->
