--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
         <!-- main -->
         <main class="container">
             <!-- jumbotron -->
-            <section class="jumbotron margin-top-standard"></section>
+            <section class="jumbotron margin-top-standard">
+                <div class="jumbotron-text">
+                    <h1>Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quia accusantium asperiores modi qui perferendis atque placeat, illum, voluptas earum corrupti illo sapiente a id unde blanditiis eligendi nihil assumenda!</p>
+                </div>
+            </section>
             <!-- columns -->
             <section>
                 <!-- column-header -->
