added images and text in columns

--- a/index.html
+++ b/index.html
@@ -24,15 +24,36 @@
             <!-- columns -->
             <section>
                 <!-- column-header -->
-                <header class="column-header margin-top-standard"></header>
+                <header class="column-header margin-top-standard">
+                    <h1>Leadership</h1>
+                    <h3>Fertenum urna a libero tempus</h3>
+                </header>
                 <!-- columns -->
-                <div class="clearfix margin-top-standard"> 
+                <div class="row clearfix margin-top-standard"> 
                     <!-- column-left  -->
-                    <div class="column column-left"></div>
-                    <!-- column -middle -->
-                    <div class="column column-middle"></div>
+                    <div class="column column-side">
+                        <figure>
+                            <img src="img/img-1.jpg" alt="money on trees">
+                        </figure>
+                        <h4>Lorem</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quas ipsam iste ratione nihil est eum non nesciunt deleniti! Aperiam distinctio molestiae, dolor laborum iste laboriosam facilis ea ducimus accusamus.</p>
+                    </div>
+                    <!-- column -center -->
+                    <div class="column column-center">
+                        <figure>
+                            <img src="img/banner-2.jpg" alt="">
+                        </figure>
+                        <h4>Ipsum</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla obcaecati illum ratione consequatur laborum, soluta porro reprehenderit harum vitae, non quis odit. Temporibus ab distinctio reiciendis veniam expedita necessitatibus amet! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium sint fugit aspernatur debitis beatae laudantium commodi quam. Repudiandae quae, accusantium inventore nulla pariatur minima, consequuntur sequi ea odit, optio facilis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam voluptatum sit, consectetur atque a molestias provident? Exercitationem vero quia quibusdam, vitae sequi impedit aut sed culpa, iste, porro illum quam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, similique. Perspiciatis officia, consequatur dignissimos placeat nulla distinctio unde consectetur facilis ducimus quaerat odio cum dolores esse qui corrupti deserunt cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, obcaecati ullam odit maiores atque delectus, pariatur nesciunt eaque, recusandae corporis autem quisquam ipsum laudantium deserunt! Velit distinctio similique consectetur omnis. </p>
+                    </div>
                     <!-- column-right -->
-                    <div class="column column-right"></div>
+                    <div class="column column-side">
+                        <figure>
+                            <img src="img/img-3.jpg" alt="brigth ideas">
+                        </figure>
+                        <h4></h4>
+                        <p></p>
+                    </div>
                 </div>
             </section>
         </main>
