--- a/index.html
+++ b/index.html
@@ -51,14 +51,16 @@
                         <figure>
                             <img src="img/img-3.jpg" alt="brigth ideas">
                         </figure>
-                        <h4></h4>
-                        <p></p>
+                        <h4>Lorem</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis quasi obcaecati odio facilis eum asperiores enim in aspernatur, minima distinctio, et sint exercitationem quo suscipit quibusdam voluptas, repellat incidunt nulla.</p>
                     </div>
                 </div>
             </section>
         </main>
         <!-- footer -->
-        <footer class="container footer"></footer>
+        <footer class="container footer">
+            Designed with <span class="heart">&hearts;</span>
+        </footer>
         
     </body>
 </html>
