--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
         <!-- page-header -->
         <header class="container main-header">
             <img src="img/logo.png" alt="Neori" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="#">FEATURES</a></li>
+                    <li><a href="#">EDITORIALS</a></li>
+                    <li><a href="#">ENVIROMENTS</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">SHOP</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
         </header>
+       
         <!-- main -->
         <main class="container">
             <!-- jumbotron -->
