fixed jumbotron text

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <!-- jumbotron -->
             <section class="jumbotron margin-top-standard">
                 <div class="jumbotron-text">
-                    <h1>Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quia accusantium asperiores modi qui perferendis atque placeat, illum, voluptas earum corrupti illo sapiente a id unde blanditiis eligendi nihil assumenda!</p>
+                    <h2>Pretium ac placerat dui interdum nunc in eros urna morbi</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa alias nulla beatae, velit libero iure culpa debitis atque ipsam dignissimos molestiae ...</p>
                 </div>
             </section>
             <!-- columns -->
