--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <!-- page-header -->
         <header class="container main-header">
-            <img src="img/logo.png" alt="Neori" class="logo">
+            <img src="img/logo.png" alt="Neori logo" id="logo">
             <nav>
                 <ul>
                     <li><a href="#">FEATURES</a></li>
