Alternative: img instead of background for colums

--- a/index.html
+++ b/index.html
@@ -47,19 +47,25 @@
                 <div class="row clearfix margin-top-standard"> 
                     <!-- column-left  -->
                     <div class="column column-side">
-                        <section class="col-image money-tree"></section>
+                        <figure class="col-image money-tree">
+                            <img src="img/img-1.jpg" alt="Money Tree">
+                        </figure>
                         <h4>Lorem</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quas ipsam iste ratione nihil est eum non nesciunt deleniti! Aperiam distinctio molestiae, dolor laborum iste laboriosam facilis ea ducimus accusamus.</p>
                     </div>
                     <!-- column -center -->
                     <div class="column column-center">
-                        <section class="col-image focus"></section>
+                        <figure class="col-image focus">
+                            <img src="img/banner-2.jpg" alt="Focus">
+                        </figure>
                         <h4>Ipsum</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla obcaecati illum ratione consequatur laborum, soluta porro reprehenderit harum vitae, non quis odit. Temporibus ab distinctio reiciendis veniam expedita necessitatibus amet! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium sint fugit aspernatur debitis beatae laudantium commodi quam. Repudiandae quae, accusantium inventore nulla pariatur minima, consequuntur sequi ea odit, optio facilis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam voluptatum sit, consectetur atque a molestias provident? Exercitationem vero quia quibusdam, vitae sequi impedit aut sed culpa, iste, porro illum quam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, similique. Perspiciatis officia, consequatur dignissimos placeat nulla distinctio unde consectetur facilis ducimus quaerat odio cum dolores esse qui corrupti deserunt cumque! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, obcaecati ullam odit maiores atque delectus, pariatur nesciunt eaque, recusandae corporis autem quisquam ipsum laudantium deserunt! Velit distinctio similique consectetur omnis. </p>
                     </div>
                     <!-- column-right -->
                     <div class="column column-side">
-                        <section class="col-image bright-ideas"></section>
+                        <figure class="col-image bright-ideas">
+                            <img src="img/img-3.jpg" alt="Bright Ideas">
+                        </figure>
                         <h4>Lorem</h4>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis quasi obcaecati odio facilis eum asperiores enim in aspernatur, minima distinctio, et sint exercitationem quo suscipit quibusdam voluptas, repellat incidunt nulla.</p>
                     </div>
